# dup-hawk-bot

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: pypi-release.yml
dup_hawk/: __init__.py  __version__.py  dup_hawk.py  github.py
pygithub/: __init__.py  github.py
tests/: conftest.py
tests/integration/: test_dup_hawk.py  test_dup_hawk_int.py  test_github.py
tests/test_data/: data.py  df.pkl  dist_df.pkl  git_issues.json
tests/unit/: test_dup_hawk.py
